--- a/about.html
+++ b/about.html
@@ -27,16 +27,17 @@
             <img class="topcontainer" src="img\jumbo-about.png">
         </div>
 
-    <div class="container-about-page">
+      <div class="container-about-page">
 
-      <h4>About</h4>
-      <p>
-        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-      </p>
-      <br>
-      <br>
-      <hr style="border-top: dashed 2px;">
-      <br>
+        <h4>About</h4>
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+        </p>
+        <br>
+        <br>
+        <hr style="border-top: dashed 2px;">
+        <br>
+      </div>
 <section class="boxes2">
   <div class="box-type-2">
     <img src="img/about-plan.png" alt="strategy">
@@ -80,21 +81,21 @@
   </div>
 </section>
 <hr style="border-top: dashed 2px;">
-  <div class="finalstatement">  
-  <h4>Let's Work Together</h4>
-    <p>
-      Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-    </p>
-  </div>  
+  <div class="finalstatement">
+    <h4>Let's Work Together</h4>
+      <p>
+        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+      </p>
+  </div>
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">About</a>
+          <a href="about.html">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
       </footer>
-    </div><!-- container -->
+    </div>
 </body>
 </html>
